force-app/main/default/objects/Customer_Family__c/Customer_Family__c.object-meta.xml
<CustomObject>
    <description>To represent any beneficiaries supported by the customer</description>
    <label>Customer Family</label>
    <nameField>
        <displayFormat>CF-{0000}</displayFormat>
        <label>Custom Family Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Family</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>