force-app/main/default/objects/Customer_Family__c/fields/Beneficiary_1__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary 1</label>
    <referenceTo>Customer</referenceTo>
    <relationshipLabel>Customer Family</relationshipLabel>
    <relationshipName>Customer_Family</relationshipName>
    <type>Lookup</type>
</CustomField>