force-app/main/default/objects/Customer_Family__c/fields/Beneficiary_2__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary 2</label>
    <referenceTo>Customer</referenceTo>
    <relationshipLabel>Customer Family</relationshipLabel>
    <relationshipName>Customer_Beneficiary_2</relationshipName>
    <type>Lookup</type>
</CustomField>