force-app/main/default/objects/Customer_Family__c/fields/Family_Manager__c.field-meta.xml
<CustomField>
    <fullName>Family_Manager__c</fullName>
    <label>Family Manager</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Customer Family</relationshipLabel>
    <relationshipName>Customer_Family_Manager</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>